Made the demo lock out bad tokens.

--- a/parameters-demo/.classpath
+++ b/parameters-demo/.classpath
@@ -2,12 +2,14 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="var" path="RED5_HOME/red5-server.jar"/>
-	<classpathentry kind="var" path="RED5_HOME/lib/red5-io-1.0.6-RELEASE.jar"/>
-	<classpathentry kind="var" path="RED5_HOME/lib/red5-server-common-1.0.6-RELEASE.jar"/>
-	<classpathentry kind="var" path="RED5_HOME/lib/jcl-over-slf4j-1.7.9.jar"/>
-	<classpathentry kind="var" path="RED5_HOME/lib/jul-to-slf4j-1.7.9.jar"/>
-	<classpathentry kind="var" path="RED5_HOME/lib/log4j-over-slf4j-1.7.9.jar"/>
-	<classpathentry kind="var" path="RED5_HOME/lib/slf4j-api-1.7.9.jar"/>
+	<classpathentry kind="var" path="RED5PRO_ROOT/red5-server.jar"/>
+	<classpathentry kind="var" path="RED5PRO_ROOT/lib/red5-io-1.0.8-M12.jar"/>
+	<classpathentry kind="var" path="RED5PRO_ROOT/lib/red5-server-common-1.0.8-M12.jar"/>
+	<classpathentry kind="var" path="RED5PRO_ROOT/lib/slf4j-api-1.7.21.jar"/>
+	<classpathentry kind="var" path="RED5PRO_ROOT/lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="var" path="RED5PRO_ROOT/lib/spring-beans-4.3.2.RELEASE.jar"/>
+	<classpathentry kind="var" path="RED5PRO_ROOT/lib/spring-context-4.3.2.RELEASE.jar"/>
+	<classpathentry kind="var" path="RED5PRO_ROOT/lib/spring-core-4.3.2.RELEASE.jar"/>
+	<classpathentry kind="var" path="RED5PRO_ROOT/lib/spring-web-4.3.2.RELEASE.jar"/>
 	<classpathentry kind="output" path="parameterdemo/WEB-INF/classes"/>
 </classpath>
